clusters/home-server/iot/zwave-js-ui/03-zwave-js-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave-js-ui-deployment
  namespace: iot
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: zwave-js-ui
  template:
    metadata:
      labels:
        app: zwave-js-ui
    spec:
      nodeSelector:
        storage-type: hostpath
        zwave: "true"
      containers:
      - name: zwave-js-ui
        image: zwavejs/zwave-js-ui:11.7.0
        ports:
        - name: http
          containerPort: 8091
        - name: websocket
          containerPort: 3000
        volumeMounts:
          - name: zwave-js-ui-config-storage
            mountPath: /usr/src/app/store          
      volumes:
        - name: zwave-js-ui-config-storage
          persistentVolumeClaim:
            claimName: zwave-js-ui-config-pvc
