clusters/home-server/iot/zwave-js-ui/zwave-js-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave-js-ui-deployment
  namespace: iot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zwave-js-ui
  template:
    metadata:
      labels:
        app: zwave-js-ui
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        zwave: "true"
      containers:
        - name: zwave-js-ui
          image: zwavejs/zwave-js-ui:11.8.2
          ports:
            - name: http
              containerPort: 8091
            - name: websocket
              containerPort: 3000
          volumeMounts:
            - name: zwave-js-ui-config-storage
              mountPath: /usr/src/app/store
      volumes:
        - name: zwave-js-ui-config-storage
          persistentVolumeClaim:
            claimName: zwave-js-ui-config-longhorn-pvc
